@@ -1,3 +1,7 @@
+2002-06-18  Andrew Cagney  <cagney@redhat.com>
+
+	* interp.c (sim_firmware_command): Initialize `address'.
+
 2002-06-16  Andrew Cagney  <ac131313@redhat.com>
 
 	* configure: Regenerated to track ../common/aclocal.m4 changes.
